// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chrome renders correctly 1`] = `
<div
  className="chrome-picker "
  style={
    Object {
      "MozBorderRadius": "2px",
      "MozBoxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "OBorderRadius": "2px",
      "OBoxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "WebkitBorderRadius": "2px",
      "WebkitBoxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "background": "#fff",
      "borderRadius": "2px",
      "boxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "boxSizing": "initial",
      "fontFamily": "Menlo",
      "msBorderRadius": "2px",
      "msBoxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "width": 225,
    }
  }
>
  <div
    style={
      Object {
        "MozBorderRadius": "2px 2px 0 0",
        "OBorderRadius": "2px 2px 0 0",
        "WebkitBorderRadius": "2px 2px 0 0",
        "borderRadius": "2px 2px 0 0",
        "msBorderRadius": "2px 2px 0 0",
        "overflow": "hidden",
        "paddingBottom": "55%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "MozBorderRadius": "",
          "OBorderRadius": "",
          "WebkitBorderRadius": "",
          "background": "hsl(250.38461538461542,100%, 50%)",
          "borderRadius": "",
          "bottom": "0px",
          "left": "0px",
          "msBorderRadius": "",
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
      tabIndex={0}
    >
      <style>
        
        .saturation-white {
          background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
          background: linear-gradient(to right, #fff, rgba(255,255,255,0));
        }
        .saturation-black {
          background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
          background: linear-gradient(to top, #000, rgba(0,0,0,0));
        }
      
      </style>
      <div
        className="saturation-white"
        style={
          Object {
            "MozBorderRadius": "",
            "OBorderRadius": "",
            "WebkitBorderRadius": "",
            "borderRadius": "",
            "bottom": "0px",
            "left": "0px",
            "msBorderRadius": "",
            "position": "absolute",
            "right": "0px",
            "top": "0px",
          }
        }
      >
        <div
          className="saturation-black"
          style={
            Object {
              "MozBorderRadius": "",
              "MozBoxShadow": "",
              "OBorderRadius": "",
              "OBoxShadow": "",
              "WebkitBorderRadius": "",
              "WebkitBoxShadow": "",
              "borderRadius": "",
              "bottom": "0px",
              "boxShadow": "",
              "left": "0px",
              "msBorderRadius": "",
              "msBoxShadow": "",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        />
        <div
          style={
            Object {
              "cursor": "default",
              "left": "67.53246753246754%",
              "position": "absolute",
              "top": "69.80392156862746%",
            }
          }
        >
          <div
            style={
              Object {
                "MozBorderRadius": "6px",
                "MozBoxShadow": "inset 0 0 0 1px #fff",
                "MozTransform": "translate(-6px, -6px)",
                "OBorderRadius": "6px",
                "OBoxShadow": "inset 0 0 0 1px #fff",
                "OTransform": "translate(-6px, -6px)",
                "WebkitBorderRadius": "6px",
                "WebkitBoxShadow": "inset 0 0 0 1px #fff",
                "WebkitTransform": "translate(-6px, -6px)",
                "borderRadius": "6px",
                "boxShadow": "inset 0 0 0 1px #fff",
                "height": "12px",
                "msBorderRadius": "6px",
                "msBoxShadow": "inset 0 0 0 1px #fff",
                "msTransform": "translate(-6px, -6px)",
                "transform": "translate(-6px, -6px)",
                "width": "12px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "padding": "16px 16px 12px",
      }
    }
  >
    <div
      className="flexbox-fix"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": "32px",
          }
        }
      >
        <div
          style={
            Object {
              "MozBorderRadius": "8px",
              "OBorderRadius": "8px",
              "WebkitBorderRadius": "8px",
              "borderRadius": "8px",
              "height": "16px",
              "marginTop": "6px",
              "msBorderRadius": "8px",
              "overflow": "hidden",
              "position": "relative",
              "width": "16px",
            }
          }
        >
          <div
            style={
              Object {
                "MozBorderRadius": "8px",
                "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "OBorderRadius": "8px",
                "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "WebkitBorderRadius": "8px",
                "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "background": "rgba(34, 25, 77, 1)",
                "borderRadius": "8px",
                "bottom": "0px",
                "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "left": "0px",
                "msBorderRadius": "8px",
                "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
                "zIndex": "2",
              }
            }
          />
          <div
            style={
              Object {
                "MozBorderRadius": "",
                "MozBoxShadow": "",
                "OBorderRadius": "",
                "OBoxShadow": "",
                "WebkitBorderRadius": "",
                "WebkitBoxShadow": "",
                "background": "url(data:image/png;base64,00) center left",
                "borderRadius": "",
                "bottom": "0px",
                "boxShadow": "",
                "left": "0px",
                "msBorderRadius": "",
                "msBoxShadow": "",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "MozBoxFlex": "1",
            "WebkitBoxFlex": "1",
            "WebkitFlex": "1",
            "flex": "1",
            "msFlex": "1",
          }
        }
      >
        <div
          style={
            Object {
              "height": "10px",
              "marginBottom": "8px",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "MozBorderRadius": "",
                "MozBoxShadow": "",
                "OBorderRadius": "",
                "OBoxShadow": "",
                "WebkitBorderRadius": "",
                "WebkitBoxShadow": "",
                "borderRadius": "",
                "bottom": "0px",
                "boxShadow": "",
                "left": "0px",
                "msBorderRadius": "",
                "msBoxShadow": "",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
              }
            }
          >
            <div
              className="hue-horizontal"
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              style={
                Object {
                  "MozBorderRadius": "",
                  "OBorderRadius": "",
                  "WebkitBorderRadius": "",
                  "borderRadius": "",
                  "height": "100%",
                  "msBorderRadius": "",
                  "outline": "none",
                  "padding": "0 2px",
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <style>
                
          .hue-horizontal {
            background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
              33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            background: -webkit-linear-gradient(to right, #f00 0%, #ff0
              17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
          }

          .hue-vertical {
            background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
              #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
              #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
          }
        
              </style>
              <div
                style={
                  Object {
                    "left": "69.55128205128206%",
                    "position": "absolute",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "MozBorderRadius": "6px",
                      "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "MozTransform": "translate(-6px, -1px)",
                      "OBorderRadius": "6px",
                      "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "OTransform": "translate(-6px, -1px)",
                      "WebkitBorderRadius": "6px",
                      "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "WebkitTransform": "translate(-6px, -1px)",
                      "backgroundColor": "rgb(248, 248, 248)",
                      "borderRadius": "6px",
                      "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "height": "12px",
                      "msBorderRadius": "6px",
                      "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "msTransform": "translate(-6px, -1px)",
                      "transform": "translate(-6px, -1px)",
                      "width": "12px",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "height": "10px",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "MozBorderRadius": undefined,
                "OBorderRadius": undefined,
                "WebkitBorderRadius": undefined,
                "borderRadius": undefined,
                "bottom": "0px",
                "left": "0px",
                "msBorderRadius": undefined,
                "position": "absolute",
                "right": "0px",
                "top": "0px",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "OBorderRadius": undefined,
                  "WebkitBorderRadius": undefined,
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                style={
                  Object {
                    "MozBorderRadius": "",
                    "MozBoxShadow": "",
                    "OBorderRadius": "",
                    "OBoxShadow": "",
                    "WebkitBorderRadius": "",
                    "WebkitBoxShadow": "",
                    "background": "url(data:image/png;base64,00) center left",
                    "borderRadius": "",
                    "bottom": "0px",
                    "boxShadow": "",
                    "left": "0px",
                    "msBorderRadius": "",
                    "msBoxShadow": "",
                    "position": "absolute",
                    "right": "0px",
                    "top": "0px",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "MozBoxShadow": undefined,
                  "OBorderRadius": undefined,
                  "OBoxShadow": undefined,
                  "WebkitBorderRadius": undefined,
                  "WebkitBoxShadow": undefined,
                  "background": "linear-gradient(to right, rgba(34,25,77, 0) 0%,
             rgba(34,25,77, 1) 100%)",
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "boxShadow": undefined,
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "msBoxShadow": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            />
            <div
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              style={
                Object {
                  "height": "100%",
                  "margin": "0 3px",
                  "outline": "none",
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <div
                style={
                  Object {
                    "left": "100%",
                    "position": "absolute",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "MozBorderRadius": "6px",
                      "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "MozTransform": "translate(-6px, -1px)",
                      "OBorderRadius": "6px",
                      "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "OTransform": "translate(-6px, -1px)",
                      "WebkitBorderRadius": "6px",
                      "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "WebkitTransform": "translate(-6px, -1px)",
                      "backgroundColor": "rgb(248, 248, 248)",
                      "borderRadius": "6px",
                      "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "height": "12px",
                      "msBorderRadius": "6px",
                      "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "msTransform": "translate(-6px, -1px)",
                      "transform": "translate(-6px, -1px)",
                      "width": "12px",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flexbox-fix"
      id="chromeFields"
      style={
        Object {
          "display": "flex",
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="flexbox-fix"
        style={
          Object {
            "MozBoxFlex": "1",
            "WebkitBoxFlex": "1",
            "WebkitFlex": "1",
            "display": "none",
            "flex": "1",
            "marginLeft": "-6px",
            "msFlex": "1",
          }
        }
      >
        <div
          className="flexbox-fix"
          style={
            Object {
              "MozBoxFlex": "1",
              "WebkitBoxFlex": "1",
              "WebkitFlex": "1",
              "display": "flex",
              "flex": "1",
              "marginLeft": "-6px",
              "msFlex": "1",
            }
          }
        >
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="34"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                r
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="25"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                g
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="77"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                b
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="1"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                a
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="flexbox-fix"
        style={
          Object {
            "MozBoxFlex": "1",
            "WebkitBoxFlex": "1",
            "WebkitFlex": "1",
            "display": "none",
            "flex": "1",
            "marginLeft": "-6px",
            "msFlex": "1",
          }
        }
      >
        <div
          className="flexbox-fix"
          style={
            Object {
              "MozBoxFlex": "1",
              "WebkitBoxFlex": "1",
              "WebkitFlex": "1",
              "display": "flex",
              "flex": "1",
              "marginLeft": "-6px",
              "msFlex": "1",
            }
          }
        >
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="250"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                h
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="51%"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                s
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="20%"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                l
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="1"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                a
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="flexbox-fix"
        style={
          Object {
            "MozBoxFlex": "1",
            "WebkitBoxFlex": "1",
            "WebkitFlex": "1",
            "display": "flex",
            "flex": "1",
            "marginLeft": "-6px",
            "msFlex": "1",
          }
        }
      >
        <div
          className="flexbox-fix"
          style={
            Object {
              "MozBoxFlex": "1",
              "WebkitBoxFlex": "1",
              "WebkitFlex": "1",
              "display": "flex",
              "flex": "1",
              "marginLeft": "-6px",
              "msFlex": "1",
            }
          }
        >
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="#22194D"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                hex
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "position": "relative",
            "textAlign": "right",
            "width": "32px",
          }
        }
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": "-4px",
              "marginTop": "12px",
              "outline": "none",
              "position": "relative",
            }
          }
          tabIndex={0}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "MozBorderRadius": "5px",
                "OBorderRadius": "5px",
                "WebkitBorderRadius": "5px",
                "border": "1px transparent solid",
                "borderRadius": "5px",
                "fill": "#333",
                "height": "24px",
                "msBorderRadius": "5px",
                "width": "24px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M6.99 11L3 15l3.99 4v-3H14v-2H6.99v-3zM21 9l-3.99-4v3H10v2h7.01v3L21 9z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Chrome renders on server correctly 1`] = `
<div
  className="chrome-picker "
  style={
    Object {
      "MozBorderRadius": "2px",
      "MozBoxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "OBorderRadius": "2px",
      "OBoxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "WebkitBorderRadius": "2px",
      "WebkitBoxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "background": "#fff",
      "borderRadius": "2px",
      "boxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "boxSizing": "initial",
      "fontFamily": "Menlo",
      "msBorderRadius": "2px",
      "msBoxShadow": "0 0 2px rgba(0,0,0,.3), 0 4px 8px rgba(0,0,0,.3)",
      "width": 225,
    }
  }
>
  <div
    style={
      Object {
        "MozBorderRadius": "2px 2px 0 0",
        "OBorderRadius": "2px 2px 0 0",
        "WebkitBorderRadius": "2px 2px 0 0",
        "borderRadius": "2px 2px 0 0",
        "msBorderRadius": "2px 2px 0 0",
        "overflow": "hidden",
        "paddingBottom": "55%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "MozBorderRadius": "",
          "OBorderRadius": "",
          "WebkitBorderRadius": "",
          "background": "hsl(250.38461538461542,100%, 50%)",
          "borderRadius": "",
          "bottom": "0px",
          "left": "0px",
          "msBorderRadius": "",
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
      tabIndex={0}
    >
      <style>
        
        .saturation-white {
          background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
          background: linear-gradient(to right, #fff, rgba(255,255,255,0));
        }
        .saturation-black {
          background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
          background: linear-gradient(to top, #000, rgba(0,0,0,0));
        }
      
      </style>
      <div
        className="saturation-white"
        style={
          Object {
            "MozBorderRadius": "",
            "OBorderRadius": "",
            "WebkitBorderRadius": "",
            "borderRadius": "",
            "bottom": "0px",
            "left": "0px",
            "msBorderRadius": "",
            "position": "absolute",
            "right": "0px",
            "top": "0px",
          }
        }
      >
        <div
          className="saturation-black"
          style={
            Object {
              "MozBorderRadius": "",
              "MozBoxShadow": "",
              "OBorderRadius": "",
              "OBoxShadow": "",
              "WebkitBorderRadius": "",
              "WebkitBoxShadow": "",
              "borderRadius": "",
              "bottom": "0px",
              "boxShadow": "",
              "left": "0px",
              "msBorderRadius": "",
              "msBoxShadow": "",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        />
        <div
          style={
            Object {
              "cursor": "default",
              "left": "67.53246753246754%",
              "position": "absolute",
              "top": "69.80392156862746%",
            }
          }
        >
          <div
            style={
              Object {
                "MozBorderRadius": "6px",
                "MozBoxShadow": "inset 0 0 0 1px #fff",
                "MozTransform": "translate(-6px, -6px)",
                "OBorderRadius": "6px",
                "OBoxShadow": "inset 0 0 0 1px #fff",
                "OTransform": "translate(-6px, -6px)",
                "WebkitBorderRadius": "6px",
                "WebkitBoxShadow": "inset 0 0 0 1px #fff",
                "WebkitTransform": "translate(-6px, -6px)",
                "borderRadius": "6px",
                "boxShadow": "inset 0 0 0 1px #fff",
                "height": "12px",
                "msBorderRadius": "6px",
                "msBoxShadow": "inset 0 0 0 1px #fff",
                "msTransform": "translate(-6px, -6px)",
                "transform": "translate(-6px, -6px)",
                "width": "12px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "padding": "16px 16px 12px",
      }
    }
  >
    <div
      className="flexbox-fix"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": "32px",
          }
        }
      >
        <div
          style={
            Object {
              "MozBorderRadius": "8px",
              "OBorderRadius": "8px",
              "WebkitBorderRadius": "8px",
              "borderRadius": "8px",
              "height": "16px",
              "marginTop": "6px",
              "msBorderRadius": "8px",
              "overflow": "hidden",
              "position": "relative",
              "width": "16px",
            }
          }
        >
          <div
            style={
              Object {
                "MozBorderRadius": "8px",
                "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "OBorderRadius": "8px",
                "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "WebkitBorderRadius": "8px",
                "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "background": "rgba(34, 25, 77, 1)",
                "borderRadius": "8px",
                "bottom": "0px",
                "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "left": "0px",
                "msBorderRadius": "8px",
                "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.1)",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
                "zIndex": "2",
              }
            }
          />
          <div
            style={
              Object {
                "MozBorderRadius": "",
                "MozBoxShadow": "",
                "OBorderRadius": "",
                "OBoxShadow": "",
                "WebkitBorderRadius": "",
                "WebkitBoxShadow": "",
                "background": "url(data:image/png;base64,00) center left",
                "borderRadius": "",
                "bottom": "0px",
                "boxShadow": "",
                "left": "0px",
                "msBorderRadius": "",
                "msBoxShadow": "",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "MozBoxFlex": "1",
            "WebkitBoxFlex": "1",
            "WebkitFlex": "1",
            "flex": "1",
            "msFlex": "1",
          }
        }
      >
        <div
          style={
            Object {
              "height": "10px",
              "marginBottom": "8px",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "MozBorderRadius": "",
                "MozBoxShadow": "",
                "OBorderRadius": "",
                "OBoxShadow": "",
                "WebkitBorderRadius": "",
                "WebkitBoxShadow": "",
                "borderRadius": "",
                "bottom": "0px",
                "boxShadow": "",
                "left": "0px",
                "msBorderRadius": "",
                "msBoxShadow": "",
                "position": "absolute",
                "right": "0px",
                "top": "0px",
              }
            }
          >
            <div
              className="hue-horizontal"
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              style={
                Object {
                  "MozBorderRadius": "",
                  "OBorderRadius": "",
                  "WebkitBorderRadius": "",
                  "borderRadius": "",
                  "height": "100%",
                  "msBorderRadius": "",
                  "outline": "none",
                  "padding": "0 2px",
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <style>
                
          .hue-horizontal {
            background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
              33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            background: -webkit-linear-gradient(to right, #f00 0%, #ff0
              17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
          }

          .hue-vertical {
            background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
              #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
              #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
          }
        
              </style>
              <div
                style={
                  Object {
                    "left": "69.55128205128206%",
                    "position": "absolute",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "MozBorderRadius": "6px",
                      "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "MozTransform": "translate(-6px, -1px)",
                      "OBorderRadius": "6px",
                      "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "OTransform": "translate(-6px, -1px)",
                      "WebkitBorderRadius": "6px",
                      "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "WebkitTransform": "translate(-6px, -1px)",
                      "backgroundColor": "rgb(248, 248, 248)",
                      "borderRadius": "6px",
                      "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "height": "12px",
                      "msBorderRadius": "6px",
                      "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "msTransform": "translate(-6px, -1px)",
                      "transform": "translate(-6px, -1px)",
                      "width": "12px",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "height": "10px",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "MozBorderRadius": undefined,
                "OBorderRadius": undefined,
                "WebkitBorderRadius": undefined,
                "borderRadius": undefined,
                "bottom": "0px",
                "left": "0px",
                "msBorderRadius": undefined,
                "position": "absolute",
                "right": "0px",
                "top": "0px",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "OBorderRadius": undefined,
                  "WebkitBorderRadius": undefined,
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            >
              <div
                style={
                  Object {
                    "MozBorderRadius": "",
                    "MozBoxShadow": "",
                    "OBorderRadius": "",
                    "OBoxShadow": "",
                    "WebkitBorderRadius": "",
                    "WebkitBoxShadow": "",
                    "background": "url(data:image/png;base64,00) center left",
                    "borderRadius": "",
                    "bottom": "0px",
                    "boxShadow": "",
                    "left": "0px",
                    "msBorderRadius": "",
                    "msBoxShadow": "",
                    "position": "absolute",
                    "right": "0px",
                    "top": "0px",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "MozBoxShadow": undefined,
                  "OBorderRadius": undefined,
                  "OBoxShadow": undefined,
                  "WebkitBorderRadius": undefined,
                  "WebkitBoxShadow": undefined,
                  "background": "linear-gradient(to right, rgba(34,25,77, 0) 0%,
             rgba(34,25,77, 1) 100%)",
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "boxShadow": undefined,
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "msBoxShadow": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            />
            <div
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              style={
                Object {
                  "height": "100%",
                  "margin": "0 3px",
                  "outline": "none",
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <div
                style={
                  Object {
                    "left": "100%",
                    "position": "absolute",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "MozBorderRadius": "6px",
                      "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "MozTransform": "translate(-6px, -1px)",
                      "OBorderRadius": "6px",
                      "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "OTransform": "translate(-6px, -1px)",
                      "WebkitBorderRadius": "6px",
                      "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "WebkitTransform": "translate(-6px, -1px)",
                      "backgroundColor": "rgb(248, 248, 248)",
                      "borderRadius": "6px",
                      "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "height": "12px",
                      "msBorderRadius": "6px",
                      "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
                      "msTransform": "translate(-6px, -1px)",
                      "transform": "translate(-6px, -1px)",
                      "width": "12px",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flexbox-fix"
      id="chromeFields"
      style={
        Object {
          "display": "flex",
          "paddingTop": "16px",
        }
      }
    >
      <div
        className="flexbox-fix"
        style={
          Object {
            "MozBoxFlex": "1",
            "WebkitBoxFlex": "1",
            "WebkitFlex": "1",
            "display": "none",
            "flex": "1",
            "marginLeft": "-6px",
            "msFlex": "1",
          }
        }
      >
        <div
          className="flexbox-fix"
          style={
            Object {
              "MozBoxFlex": "1",
              "WebkitBoxFlex": "1",
              "WebkitFlex": "1",
              "display": "flex",
              "flex": "1",
              "marginLeft": "-6px",
              "msFlex": "1",
            }
          }
        >
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="34"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                r
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="25"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                g
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="77"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                b
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="1"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                a
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="flexbox-fix"
        style={
          Object {
            "MozBoxFlex": "1",
            "WebkitBoxFlex": "1",
            "WebkitFlex": "1",
            "display": "none",
            "flex": "1",
            "marginLeft": "-6px",
            "msFlex": "1",
          }
        }
      >
        <div
          className="flexbox-fix"
          style={
            Object {
              "MozBoxFlex": "1",
              "WebkitBoxFlex": "1",
              "WebkitFlex": "1",
              "display": "flex",
              "flex": "1",
              "marginLeft": "-6px",
              "msFlex": "1",
            }
          }
        >
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="250"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                h
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="51%"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                s
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="20%"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                l
              </span>
            </div>
          </div>
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="1"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                a
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="flexbox-fix"
        style={
          Object {
            "MozBoxFlex": "1",
            "WebkitBoxFlex": "1",
            "WebkitFlex": "1",
            "display": "flex",
            "flex": "1",
            "marginLeft": "-6px",
            "msFlex": "1",
          }
        }
      >
        <div
          className="flexbox-fix"
          style={
            Object {
              "MozBoxFlex": "1",
              "WebkitBoxFlex": "1",
              "WebkitFlex": "1",
              "display": "flex",
              "flex": "1",
              "marginLeft": "-6px",
              "msFlex": "1",
            }
          }
        >
          <div
            style={
              Object {
                "paddingLeft": "6px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder=""
                spellCheck="false"
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px #dadada",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px #dadada",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                    "border": "none",
                    "borderRadius": "2px",
                    "boxShadow": "inset 0 0 0 1px #dadada",
                    "color": "#333",
                    "fontSize": "11px",
                    "height": "21px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px #dadada",
                    "textAlign": "center",
                    "width": "100%",
                  }
                }
                value="#22194D"
              />
              <span
                onMouseDown={[Function]}
                role="button"
                style={
                  Object {
                    "color": "#969696",
                    "display": "block",
                    "fontSize": "11px",
                    "lineHeight": "11px",
                    "marginTop": "12px",
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  }
                }
                tabIndex={0}
              >
                hex
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "position": "relative",
            "textAlign": "right",
            "width": "32px",
          }
        }
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          style={
            Object {
              "cursor": "pointer",
              "marginRight": "-4px",
              "marginTop": "12px",
              "outline": "none",
              "position": "relative",
            }
          }
          tabIndex={0}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "MozBorderRadius": "5px",
                "OBorderRadius": "5px",
                "WebkitBorderRadius": "5px",
                "border": "1px transparent solid",
                "borderRadius": "5px",
                "fill": "#333",
                "height": "24px",
                "msBorderRadius": "5px",
                "width": "24px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M6.99 11L3 15l3.99 4v-3H14v-2H6.99v-3zM21 9l-3.99-4v3H10v2h7.01v3L21 9z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChromeFields renders correctly 1`] = `
<div
  className="flexbox-fix"
  id="chromeFields"
  style={
    Object {
      "display": "flex",
      "paddingTop": "16px",
    }
  }
>
  <div
    className="flexbox-fix"
    style={
      Object {
        "MozBoxFlex": "1",
        "WebkitBoxFlex": "1",
        "WebkitFlex": "1",
        "display": "none",
        "flex": "1",
        "marginLeft": "-6px",
        "msFlex": "1",
      }
    }
  >
    <div
      className="flexbox-fix"
      style={
        Object {
          "MozBoxFlex": "1",
          "WebkitBoxFlex": "1",
          "WebkitFlex": "1",
          "display": "flex",
          "flex": "1",
          "marginLeft": "-6px",
          "msFlex": "1",
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": "6px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "2px",
                "MozBoxShadow": "inset 0 0 0 1px #dadada",
                "OBorderRadius": "2px",
                "OBoxShadow": "inset 0 0 0 1px #dadada",
                "WebkitBorderRadius": "2px",
                "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                "border": "none",
                "borderRadius": "2px",
                "boxShadow": "inset 0 0 0 1px #dadada",
                "color": "#333",
                "fontSize": "11px",
                "height": "21px",
                "msBorderRadius": "2px",
                "msBoxShadow": "inset 0 0 0 1px #dadada",
                "textAlign": "center",
                "width": "100%",
              }
            }
            value="25"
          />
          <span
            onMouseDown={[Function]}
            role="button"
            style={
              Object {
                "color": "#969696",
                "display": "block",
                "fontSize": "11px",
                "lineHeight": "11px",
                "marginTop": "12px",
                "textAlign": "center",
                "textTransform": "uppercase",
              }
            }
            tabIndex={0}
          >
            r
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": "6px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "2px",
                "MozBoxShadow": "inset 0 0 0 1px #dadada",
                "OBorderRadius": "2px",
                "OBoxShadow": "inset 0 0 0 1px #dadada",
                "WebkitBorderRadius": "2px",
                "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                "border": "none",
                "borderRadius": "2px",
                "boxShadow": "inset 0 0 0 1px #dadada",
                "color": "#333",
                "fontSize": "11px",
                "height": "21px",
                "msBorderRadius": "2px",
                "msBoxShadow": "inset 0 0 0 1px #dadada",
                "textAlign": "center",
                "width": "100%",
              }
            }
            value="77"
          />
          <span
            onMouseDown={[Function]}
            role="button"
            style={
              Object {
                "color": "#969696",
                "display": "block",
                "fontSize": "11px",
                "lineHeight": "11px",
                "marginTop": "12px",
                "textAlign": "center",
                "textTransform": "uppercase",
              }
            }
            tabIndex={0}
          >
            g
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": "6px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "2px",
                "MozBoxShadow": "inset 0 0 0 1px #dadada",
                "OBorderRadius": "2px",
                "OBoxShadow": "inset 0 0 0 1px #dadada",
                "WebkitBorderRadius": "2px",
                "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                "border": "none",
                "borderRadius": "2px",
                "boxShadow": "inset 0 0 0 1px #dadada",
                "color": "#333",
                "fontSize": "11px",
                "height": "21px",
                "msBorderRadius": "2px",
                "msBoxShadow": "inset 0 0 0 1px #dadada",
                "textAlign": "center",
                "width": "100%",
              }
            }
            value="51"
          />
          <span
            onMouseDown={[Function]}
            role="button"
            style={
              Object {
                "color": "#969696",
                "display": "block",
                "fontSize": "11px",
                "lineHeight": "11px",
                "marginTop": "12px",
                "textAlign": "center",
                "textTransform": "uppercase",
              }
            }
            tabIndex={0}
          >
            b
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": "6px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "2px",
                "MozBoxShadow": "inset 0 0 0 1px #dadada",
                "OBorderRadius": "2px",
                "OBoxShadow": "inset 0 0 0 1px #dadada",
                "WebkitBorderRadius": "2px",
                "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                "border": "none",
                "borderRadius": "2px",
                "boxShadow": "inset 0 0 0 1px #dadada",
                "color": "#333",
                "fontSize": "11px",
                "height": "21px",
                "msBorderRadius": "2px",
                "msBoxShadow": "inset 0 0 0 1px #dadada",
                "textAlign": "center",
                "width": "100%",
              }
            }
            value="1"
          />
          <span
            onMouseDown={[Function]}
            role="button"
            style={
              Object {
                "color": "#969696",
                "display": "block",
                "fontSize": "11px",
                "lineHeight": "11px",
                "marginTop": "12px",
                "textAlign": "center",
                "textTransform": "uppercase",
              }
            }
            tabIndex={0}
          >
            a
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flexbox-fix"
    style={
      Object {
        "MozBoxFlex": "1",
        "WebkitBoxFlex": "1",
        "WebkitFlex": "1",
        "display": "none",
        "flex": "1",
        "marginLeft": "-6px",
        "msFlex": "1",
      }
    }
  >
    <div
      className="flexbox-fix"
      style={
        Object {
          "MozBoxFlex": "1",
          "WebkitBoxFlex": "1",
          "WebkitFlex": "1",
          "display": "flex",
          "flex": "1",
          "marginLeft": "-6px",
          "msFlex": "1",
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": "6px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "2px",
                "MozBoxShadow": "inset 0 0 0 1px #dadada",
                "OBorderRadius": "2px",
                "OBoxShadow": "inset 0 0 0 1px #dadada",
                "WebkitBorderRadius": "2px",
                "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                "border": "none",
                "borderRadius": "2px",
                "boxShadow": "inset 0 0 0 1px #dadada",
                "color": "#333",
                "fontSize": "11px",
                "height": "21px",
                "msBorderRadius": "2px",
                "msBoxShadow": "inset 0 0 0 1px #dadada",
                "textAlign": "center",
                "width": "100%",
              }
            }
            value="150"
          />
          <span
            onMouseDown={[Function]}
            role="button"
            style={
              Object {
                "color": "#969696",
                "display": "block",
                "fontSize": "11px",
                "lineHeight": "11px",
                "marginTop": "12px",
                "textAlign": "center",
                "textTransform": "uppercase",
              }
            }
            tabIndex={0}
          >
            h
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": "6px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "2px",
                "MozBoxShadow": "inset 0 0 0 1px #dadada",
                "OBorderRadius": "2px",
                "OBoxShadow": "inset 0 0 0 1px #dadada",
                "WebkitBorderRadius": "2px",
                "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                "border": "none",
                "borderRadius": "2px",
                "boxShadow": "inset 0 0 0 1px #dadada",
                "color": "#333",
                "fontSize": "11px",
                "height": "21px",
                "msBorderRadius": "2px",
                "msBoxShadow": "inset 0 0 0 1px #dadada",
                "textAlign": "center",
                "width": "100%",
              }
            }
            value="51%"
          />
          <span
            onMouseDown={[Function]}
            role="button"
            style={
              Object {
                "color": "#969696",
                "display": "block",
                "fontSize": "11px",
                "lineHeight": "11px",
                "marginTop": "12px",
                "textAlign": "center",
                "textTransform": "uppercase",
              }
            }
            tabIndex={0}
          >
            s
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": "6px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "2px",
                "MozBoxShadow": "inset 0 0 0 1px #dadada",
                "OBorderRadius": "2px",
                "OBoxShadow": "inset 0 0 0 1px #dadada",
                "WebkitBorderRadius": "2px",
                "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                "border": "none",
                "borderRadius": "2px",
                "boxShadow": "inset 0 0 0 1px #dadada",
                "color": "#333",
                "fontSize": "11px",
                "height": "21px",
                "msBorderRadius": "2px",
                "msBoxShadow": "inset 0 0 0 1px #dadada",
                "textAlign": "center",
                "width": "100%",
              }
            }
            value="20%"
          />
          <span
            onMouseDown={[Function]}
            role="button"
            style={
              Object {
                "color": "#969696",
                "display": "block",
                "fontSize": "11px",
                "lineHeight": "11px",
                "marginTop": "12px",
                "textAlign": "center",
                "textTransform": "uppercase",
              }
            }
            tabIndex={0}
          >
            l
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "paddingLeft": "6px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "2px",
                "MozBoxShadow": "inset 0 0 0 1px #dadada",
                "OBorderRadius": "2px",
                "OBoxShadow": "inset 0 0 0 1px #dadada",
                "WebkitBorderRadius": "2px",
                "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                "border": "none",
                "borderRadius": "2px",
                "boxShadow": "inset 0 0 0 1px #dadada",
                "color": "#333",
                "fontSize": "11px",
                "height": "21px",
                "msBorderRadius": "2px",
                "msBoxShadow": "inset 0 0 0 1px #dadada",
                "textAlign": "center",
                "width": "100%",
              }
            }
            value="1"
          />
          <span
            onMouseDown={[Function]}
            role="button"
            style={
              Object {
                "color": "#969696",
                "display": "block",
                "fontSize": "11px",
                "lineHeight": "11px",
                "marginTop": "12px",
                "textAlign": "center",
                "textTransform": "uppercase",
              }
            }
            tabIndex={0}
          >
            a
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flexbox-fix"
    style={
      Object {
        "MozBoxFlex": "1",
        "WebkitBoxFlex": "1",
        "WebkitFlex": "1",
        "display": "flex",
        "flex": "1",
        "marginLeft": "-6px",
        "msFlex": "1",
      }
    }
  >
    <div
      className="flexbox-fix"
      style={
        Object {
          "MozBoxFlex": "1",
          "WebkitBoxFlex": "1",
          "WebkitFlex": "1",
          "display": "flex",
          "flex": "1",
          "marginLeft": "-6px",
          "msFlex": "1",
        }
      }
    >
      <div
        style={
          Object {
            "paddingLeft": "6px",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            spellCheck="false"
            style={
              Object {
                "MozBorderRadius": "2px",
                "MozBoxShadow": "inset 0 0 0 1px #dadada",
                "OBorderRadius": "2px",
                "OBoxShadow": "inset 0 0 0 1px #dadada",
                "WebkitBorderRadius": "2px",
                "WebkitBoxShadow": "inset 0 0 0 1px #dadada",
                "border": "none",
                "borderRadius": "2px",
                "boxShadow": "inset 0 0 0 1px #dadada",
                "color": "#333",
                "fontSize": "11px",
                "height": "21px",
                "msBorderRadius": "2px",
                "msBoxShadow": "inset 0 0 0 1px #dadada",
                "textAlign": "center",
                "width": "100%",
              }
            }
            value="#194D33"
          />
          <span
            onMouseDown={[Function]}
            role="button"
            style={
              Object {
                "color": "#969696",
                "display": "block",
                "fontSize": "11px",
                "lineHeight": "11px",
                "marginTop": "12px",
                "textAlign": "center",
                "textTransform": "uppercase",
              }
            }
            tabIndex={0}
          >
            hex
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "position": "relative",
        "textAlign": "right",
        "width": "32px",
      }
    }
  >
    <div
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      style={
        Object {
          "cursor": "pointer",
          "marginRight": "-4px",
          "marginTop": "12px",
          "outline": "none",
          "position": "relative",
        }
      }
      tabIndex={0}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "MozBorderRadius": "5px",
            "OBorderRadius": "5px",
            "WebkitBorderRadius": "5px",
            "border": "1px transparent solid",
            "borderRadius": "5px",
            "fill": "#333",
            "height": "24px",
            "msBorderRadius": "5px",
            "width": "24px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M6.99 11L3 15l3.99 4v-3H14v-2H6.99v-3zM21 9l-3.99-4v3H10v2h7.01v3L21 9z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`ChromePointer renders correctly 1`] = `
<div
  style={
    Object {
      "MozBorderRadius": "6px",
      "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "MozTransform": "translate(-6px, -1px)",
      "OBorderRadius": "6px",
      "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "OTransform": "translate(-6px, -1px)",
      "WebkitBorderRadius": "6px",
      "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "WebkitTransform": "translate(-6px, -1px)",
      "backgroundColor": "rgb(248, 248, 248)",
      "borderRadius": "6px",
      "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "height": "12px",
      "msBorderRadius": "6px",
      "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "msTransform": "translate(-6px, -1px)",
      "transform": "translate(-6px, -1px)",
      "width": "12px",
    }
  }
/>
`;

exports[`ChromePointerCircle renders correctly 1`] = `
<div
  style={
    Object {
      "MozBorderRadius": "6px",
      "MozBoxShadow": "inset 0 0 0 1px #fff",
      "MozTransform": "translate(-6px, -6px)",
      "OBorderRadius": "6px",
      "OBoxShadow": "inset 0 0 0 1px #fff",
      "OTransform": "translate(-6px, -6px)",
      "WebkitBorderRadius": "6px",
      "WebkitBoxShadow": "inset 0 0 0 1px #fff",
      "WebkitTransform": "translate(-6px, -6px)",
      "borderRadius": "6px",
      "boxShadow": "inset 0 0 0 1px #fff",
      "height": "12px",
      "msBorderRadius": "6px",
      "msBoxShadow": "inset 0 0 0 1px #fff",
      "msTransform": "translate(-6px, -6px)",
      "transform": "translate(-6px, -6px)",
      "width": "12px",
    }
  }
/>
`;
